# vectrexia-emulator

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  Makefile  Makefile.common  README.md  Vagrantfile  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-test.yml
CMakeModules/: FindGIFLIB.cmake
debugger/: CMakeLists.txt  debugger.cpp  debugger.h  main.cpp  window.cpp  window.h
src/: CMakeLists.txt  Vectorizer2.cpp  Vectorizer2.h  ay38910.cpp  ay38910.h  ay38912.cpp  ay38912.h  cartridge.cpp  cartridge.h  cd4052b.cpp  cd4052b.h  debugfont.cpp  e6809.c  gfxutil.h  integrator.h  joystick.cpp  joystick.h  m6809.cpp  m6809.h  m6809_disassemble.cpp  m6809_disassemble.h  mc1408p8.cpp  mc1408p8.h  sw_vectorizer.cpp  sw_vectorizer.h  sysrom.h  updatetimer.h  veclib.h  vectorframebuffer.cpp  vectorframebuffer.h  vectorizer.cpp  vectorizer.h  vectrexia.c  vectrexia.cpp  vectrexia.h  via6522.cpp  via6522.h  win32.h
src/libretro/: libretro.c  libretro.cpp  libretro.h
tests/: CMakeLists.txt  cartridge_test.cpp  gfxutil_test.cpp  m6809_test.cpp  m6809opcode_test.cpp  test_runner.cpp  vectrex_test.cpp
vectgif/: CMakeLists.txt  getopt.h  main.cpp
